--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container">
-	<h1><img src="CydiaIcon.png"> powtar1945</h1>
+	<h1><img src="CydiaIcon.png" style="width: 50px; height: 50px; margin: 0px;"> powtar1945</h1>
 </div>
 
 <div class="container">
